# paper-strategy-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: README.md
docs/: BACKTEST_PLAN.md  COVERAGE.md  RESULTS_since_2005.md  WORKFLOW.md  ssrn-3247865.strategy_headings.json
scripts/: extract_strategy_headings.py  generate_coverage.py
src/paper_strategy_lab/: cli.py  config.py  market_data.py  pdf_text.py  strategy_candidates.py
src/paper_strategy_lab/backtest/: metrics.py  portfolio.py  simple.py
src/paper_strategy_lab/data_sources/: __init__.py  sharadar.py  yahoo.py
src/paper_strategy_lab/strategies/: __init__.py  builtins.py  runner.py  spec.py  yaml_loader.py
src/paper_strategy_lab/universe/: sharadar_universe.py
strategies/: examples.yaml  ssrn-3247865.yaml
tests/: test_metrics.py  test_portfolio.py
