[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "paper-strategy-lab"
version = "0.1.0"
description = "Analyze and reproduce strategies from SSRN paper ssrn-3247865."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pypdf>=4.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
analysis = [
  "scipy>=1.12.0",
  "statsmodels>=0.14.0",
  "matplotlib>=3.8.0",
  "yfinance>=0.2.36",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.390",
]

[project.scripts]
paper-strategy-lab = "paper_strategy_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_strategy_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/paper_strategy_lab/cli.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["paper_strategy_lab"]
